--- a/css.css
+++ b/css.css
@@ -1,6 +1,3 @@
-.hidden{
-    display: none;
-}
 
 body{
     background-color: black;
@@ -19,4 +16,7 @@ h3{
 
 #cinema{
     display: none;
+}
+h5{
+    background-color: aqua;
 }
